--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,13 +1,17 @@
 .container {
     background-color: rgb(224, 222, 222);
+    overflow: hidden;
+    position: fixed;
+    z-index: 2;
     width: 100%;
+    top: 0;
 }
 
 .TopBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 920px;
+    max-width: 1120px;
     margin-left: auto;
     margin-right: auto;
     height: 100px;
@@ -25,7 +29,7 @@
 }
 
 .leftbuttons {
-    color: grey;
+    color: rgb(131, 131, 131);
     font-size: 18px;
     font-weight: bold;
     border: none;
@@ -34,5 +38,17 @@
 }
 
 .leftbuttons:hover {
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.restaurantContainer {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.spacer {
+    margin-top: 100px;
 }
