restaurant menu page basic

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -52,3 +52,11 @@
 .spacer {
     margin-top: 100px;
 }
+
+.flexx {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+        
+}
