--- a/src/components/search.module.css
+++ b/src/components/search.module.css
@@ -1,4 +1,4 @@
-.container {
+.search {
     position: relative;
     display: flex;
     justify-content: center;
@@ -14,4 +14,14 @@
     position: absolute;
     right: 0px;
     z-index: -1;
+}
+
+.visuallyhidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
