--- a/src/components/popup.module.css
+++ b/src/components/popup.module.css
@@ -1,4 +1,4 @@
-.popup {
+.blocker {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -11,8 +11,9 @@
   }
 
 .popup_inner {
-    position: absolute;
+    position: fixed;
     max-width: 600px;
+    min-height: 350px;
     left: 25%;
     right: 25%;
     top: 25%;
@@ -21,6 +22,7 @@
     background: white;
     border: 1px solid black;
     border-radius: 10px;
+    z-index: 1;
   }
 
 .header {
@@ -37,7 +39,7 @@
 
 .button {
     width: 200px;
-    height: 250px;
+    height: 200px;
     font-size: large;
     font-weight: bold;
 }
