--- a/src/components/modules/userlogin.module.css
+++ b/src/components/modules/userlogin.module.css
@@ -21,7 +21,7 @@
     width: 300px;
     height: 150px;
     background-color: white;
-    left: 68.5%;
+    right: 370px;
     top: 70px;
 }
 
@@ -33,11 +33,32 @@
 
 .button {
     width: 100px;
-    margin-top: 10px;
     padding: 5px;
+    margin-left: 20px;
 }
 
 .text {
     font-weight: bold;
     margin-right: 8px;
+}
+
+.checklogin {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.radioUser {
+    display: flex;
+    flex-direction: row;
+}
+
+.radioRestaurant {
+    display: flex;
+    flex-direction: row;
+}
+
+.checkcontainer {
+    display: flex;
+    flex-direction: column;
 }
