--- a/src/components/modules/popup.module.css
+++ b/src/components/modules/popup.module.css
@@ -12,8 +12,8 @@
 
 .popup_inner {
     position: fixed;
-    width: 600px;
-    height: 350px;
+    width: 30%;
+    height: 40%;
     left: 25%;
     right: 25%;
     top: 25%;
@@ -27,6 +27,7 @@
 
 .header {
     display: flex;
+    position: relative;
     justify-content: center;
 }
 
@@ -38,6 +39,7 @@
 }
 
 .button {
+    position: relative;
     width: 200px;
     height: 200px;
     font-size: large;
