--- a/src/components/modules/popup.module.css
+++ b/src/components/modules/popup.module.css
@@ -12,8 +12,8 @@
 
 .popup_inner {
     position: fixed;
-    width: 30%;
-    height: 40%;
+    width: 500px;
+    height: 350px;
     left: 25%;
     right: 25%;
     top: 25%;
