--- a/src/components/modules/userlogin.module.css
+++ b/src/components/modules/userlogin.module.css
@@ -21,8 +21,8 @@
     width: 300px;
     height: 150px;
     background-color: white;
-    right: 20%;
-    top: 8%;
+    right: 13%;
+    top: 80px;
 }
 
 .container {
