--- a/src/components/modules/addProduct.module.css
+++ b/src/components/modules/addProduct.module.css
@@ -8,12 +8,14 @@
 
 .flexbox {
     font-weight: bold;
+    font-size: large;
 }
 
 .container {
     display: flex;
     align-items: center;
-    padding: 8px;
+    justify-content: space-between;
+    padding: 40px 30px 0 20px;
 }
 
 .buttoncontainer {
@@ -25,5 +27,16 @@
 .button {
     width: 200px;
     height: 100px;
-    margin-left: 100px;
+    margin-left: 80px;
+}
+
+.error {
+    padding-left: 160px;
+    color: red;
+    font-weight: 500;
+    font-size: small;
+}
+
+.spacer {
+    margin-top: 400px;
 }
