--- a/src/components/modules/addProduct.module.css
+++ b/src/components/modules/addProduct.module.css
@@ -12,6 +12,7 @@
 }
 
 .container {
+    width: 500px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,6 +29,7 @@
     width: 200px;
     height: 100px;
     margin-left: 80px;
+    border-radius: 10px;
 }
 
 .error {
@@ -37,6 +39,39 @@
     font-size: small;
 }
 
+.inputField {
+    margin-right: 100px;
+    height: 30px;
+    width: 250px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.selectField {
+    margin-left: 16px;
+    height: 36px;
+    width: 258px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.fileUpload {
+    margin-right: 100px;
+    width: 257px
+}
+
 .spacer {
     margin-top: 400px;
+}
+
+.addnewBtn {
+    height: 36px;
+    border-radius: 10px;
+}
+
+.addPopup {
+    position: relative;
+    width: 500px;
+    bottom: 30px;
+    left: 1000px;
 }
