--- a/src/components/modules/register.module.css
+++ b/src/components/modules/register.module.css
@@ -1,16 +1,17 @@
 .container{
+  position: relative;
   display: flex;
   flex-direction: row;
-  max-width: 1120px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
-
+  margin-top: 150px;
 }
 
 .registerContainer{
     justify-content: center;
     align-items: center;
-  }
+}
   
 .row{
   display: block;
@@ -19,8 +20,6 @@
 .cell{
   display: inline-block;
   width: 140px;
-
-  
 }
   
 .inputStyle{
@@ -28,8 +27,7 @@
   height: 40px;
   left: 288px;
   top: 418px;
-  margin-bottom: 10px;
-    
+  margin-bottom: 20px;
   background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
@@ -42,8 +40,10 @@
   left: 288px;
   top: 418px;
   margin-right: 10px;
-  margin-left: 10px;
-    
+  margin-left: 10px; 
+  margin-bottom: 20px;
+  margin-top: 20px;
+
   background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
@@ -55,4 +55,17 @@
   width: 650px;
   height: 100px;
   border-radius: 10px;
+}
+
+.imageRestaurant {
+ position: absolute;
+ left: 400px;
+  z-index: -1;
+}
+
+.imageUser {
+  position: absolute;
+  top: -100px;
+  left: 600px;
+   z-index: -1;
 }
