--- a/src/components/modules/userlogin.module.css
+++ b/src/components/modules/userlogin.module.css
@@ -33,34 +33,20 @@
     width: 240px;
 }
 
-.button {
-    width: 100px;
-    padding: 5px;
-    margin-left: 20px;
-}
-
 .text {
     font-weight: bold;
     margin-right: 8px;
 }
 
-.checklogin {
+.buttoncontainer {
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: row;
 }
 
-.radioUser {
-    display: flex;
-    flex-direction: row;
+.button {
+    width: 100px;
+    padding: 5px;
+    margin: 5px;
 }
 
-.radioRestaurant {
-    display: flex;
-    flex-direction: row;
-}
-
-.checkcontainer {
-    display: flex;
-    flex-direction: column;
-}
