--- a/src/components/modules/ShoppingCart.module.css
+++ b/src/components/modules/ShoppingCart.module.css
@@ -6,18 +6,18 @@
     position: fixed;
     border: 1px solid black;
     border-radius: 10px;
-    width: 200px;
-    height: 500px;
+    width: 300px;
     background-color: rgb(240, 240, 240);
     right: 0%;
     top: 99px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .CartItem {
-    padding-top: 13px;
+    padding-top: 15px;
     
 }
-
 
 .CartPrize {
     padding-left: 30px;
@@ -29,16 +29,18 @@
     border-top: 1px black;
     margin-top: 30px;
     padding-bottom: 30px;
-    text-decoration: underline; 
 
 }
 
 .TotalPrizePrize {
     font-weight: bold;
+    margin-left: 10px;
 }
 
 .Button {
     background-color: white;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 
