--- a/src/components/modules/Restaurant.module.css
+++ b/src/components/modules/Restaurant.module.css
@@ -38,3 +38,16 @@
     margin-left: 10px;
     color: rgb(85, 85, 85);
 }
+
+.price {
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+
+.button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 80px;
+    height: 30px;
+}
