--- a/src/components/modules/navBar.module.css
+++ b/src/components/modules/navBar.module.css
@@ -5,13 +5,15 @@
     z-index: 2;
     width: 100%;
     top: 0;
+    box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
 
 .TopBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1120px;
+    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
     height: 100px;
