--- a/src/components/modules/register.module.css
+++ b/src/components/modules/register.module.css
@@ -2,15 +2,15 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  max-width: 700px;
+  max-width: 60%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 150px;
 }
 
 .registerContainer{
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
   
 .row{
@@ -58,15 +58,15 @@
 }
 
 .imageRestaurant {
- position: absolute;
- left: 400px;
+  position: absolute;
+  left: 300px;
   z-index: -1;
 }
 
 .imageUser {
   position: absolute;
   top: -100px;
-  left: 600px;
+  right: 0%;
    z-index: -1;
 }
 
