--- a/src/components/modules/restaurantMenu.module.css
+++ b/src/components/modules/restaurantMenu.module.css
@@ -1,67 +1,45 @@
 .container {
-    max-width: 1120px;
+    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
+.spacer {
+    margin-top: 380px;
+}
+
 .resinfoname {
-    padding-top: 40px;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bold;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
 }
 
 .resinfodescript {
     color: #555555;
     width: 70%;
-    
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .ProfilePic {
     width: 100%;
-    position: relative;
-    top: -10px;
+    position: absolute;
+    top: -100px;
+    height: 450px;
+    object-fit: cover;
 }
 
 .FoodCategory {
-    padding-left: 40px;
+    padding-left: 10px;
     padding-top: 50px;
     font-size: 22px;
     font-weight: bold;
-}
-
-.MenuItemBox {
-    position: relative;
-    display: flex;
-    bottom: 0;
-    margin-top: 20px;
-    margin-right: 5px;
-    border: 1px solid black;
-    border-radius: 10px;
-    height: 200px;
-    width: 360px;
-    overflow: hidden;
-    flex-direction: column;
-}
-
-.MenuItem {
-    font-size: 20px;
-    padding-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    
-}
-
-.ingridients {
-    color: #555555;
-    padding-left: 10px;
-}
-
-.prize {
-    font-size: 20px;
-    padding-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 .flexx {
@@ -69,4 +47,59 @@
     justify-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-grow: 1;
+}
+
+.Itemcontainer {
+    position: relative;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 100px;
+    min-width: 300px;
+    max-width: 600px;
+    overflow: hidden;
+    margin: 10px 0 10px 10px;
+}
+
+.image {
+    transition: transform .2s; /* Animation */
+    min-width: 100px;
+    height: 100%;
+}
+
+.image:hover {
+    transform: scale(1.4);
+}
+
+.headerContainer {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    background-color: white;
+    z-index: 1;
+}
+
+.header {
+    margin: 10px 0 0 10px;
+    font-weight: 600;
+}
+
+.greytext {
+    margin: 3px 0 0 10px;
+    color: rgb(85, 85, 85);
+}
+
+.price {
+    margin: 17px 0 0 10px;
+    font-weight: bold;
+}
+
+.button {
+    height: 30px;
+    min-width: 90px;
+    margin-top: 60px;
+    margin-right: 10px;
 }
