--- a/src/components/modules/register.module.css
+++ b/src/components/modules/register.module.css
@@ -11,15 +11,20 @@
 .registerContainer{
   justify-content: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
   
 .row{
   display: block;
+  margin-top: 10px;
 }
 
 .cell{
   display: inline-block;
-  width: 140px;
+  width: 150px;
+  font-weight: bold;
+  font-size: large;
 }
   
 .inputStyle{
@@ -59,7 +64,7 @@
 
 .imageRestaurant {
   position: absolute;
-  left: 300px;
+  right: 0%;
   z-index: -1;
 }
 
